#
include $(top_srcdir)/adm_local/unix/make_common_starter.am

#
# ===============================================================
# Files to be installed
# ===============================================================

# Scripts to be installed
# dist_salomescript_PYTHON = TestHEXA.py
dist_salomescript_PYTHON = \
	BIELLE.py \
	test_BIELLE_no_assoc.py \
	test_BIELLE_bad_assoc.py \
	TUYAU_COURBE.py \
	test_TUYAU_COURBE_no_assoc.py \
	test_TUYAU_COURBE_weird_assoc.py \
	INTER_3_CYLINDRE.py \
	test_INTER_3_CYLINDRE_no_assoc.py \
	Test_HEXABLOCK.py \
	test_HEXABLOCK.py \
	test_distrib.py

nodist_salomescript_DATA = \
	tees.brep \
	tuyau.brep \
	crank.stp

