#  Copyright (C) 2009-2011  CEA/DEN, EDF R&D
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
#  See http:#www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#
include $(top_srcdir)/adm_local/unix/make_common_starter.am

#
# ===============================================================
# Files to be installed
# ===============================================================

# Scripts to be installed
# dist_salomescript_PYTHON = TestHEXA.py
dist_salomescript_PYTHON = \
	bielle.py \
	test_BIELLE_no_assoc.py \
	test_BIELLE_bad_assoc.py \
	TUYAU_COURBE.py \
	test_TUYAU_COURBE_no_assoc.py \
	test_TUYAU_COURBE_weird_assoc.py \
	INTER_3_CYLINDRE.py \
	test_INTER_3_CYLINDRE_no_assoc.py \
	Test_HEXABLOCK.py \
	test_HEXABLOCK.py \
	bride.py \
	test_distrib.py

dist_salomescript_DATA = \
	tees.brep \
	tuyau.brep \
	bride.brep \
	crank.stp

